--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
 </head>
 <body>
 
+<div id="out1">Output 1: </div>
+<div id="out2">Output 2: </div>
+
+
   <script src="js/api.js"></script>
+
+  <script src="js/remote.js"></script>
 
 
   
