json live server api implementation

--- a/index.html
+++ b/index.html
@@ -33,9 +33,22 @@
 <div id="out2">Output 2: </div>
 
 
+<div>
+
+<input type="text" name="name" id="nameinp" value="enter name"/>
+<input type="text" name="title" id="titleinp" value="enter title"/>
+
+<button id="btnsubmit">submit data</button>
+
+
+</div>
+
+
   <script src="js/api.js"></script>
 
   <script src="js/remote.js"></script>
+
+  <script src="/js/submitdata.js"></script>
 
 
   
